# JobAutomation

./: .env  .gitignore  Driveapi.py  README.md  description.md  gemini.py  googlesheets.py  main.py  pyproject.toml  systems.md
apps/: Driveapi.py  gemini.py  scrapper.py
markdown_file/: resume.md
